--- a/main.html
+++ b/main.html
@@ -3,324 +3,55 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tables</title>
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
-	<style>
-		#firstTd td{
-			padding: 5px;
-		}
-		#divHeader td{
-			padding: 5px;
-		}
-		#table_div td{
-			padding: 5px;
-		}
-		#firstcol td{
-			padding: 5px;
-		}
-		input[type="checkbox"]{
-			margin: 0px;
-		}
-
-	</style>
 
 <script src="libs/jquery.js"></script>
-<script src="tableForChrome.js"></script>
+<script src="libs/mock.js"></script>
+<script src="table.js"></script>
 
-<table cellspacing="0" cellpadding="0" border="0" >
-	<!-- title -->
-	<tr>
+<script>
+var data = Mock.mock(
+	{
+		'amount|7': {
+			'cpc|1-1000': 100,
+			'cpm|1-1000': 100,
+			'cpa|1-1000': 100,
+			'clicks|1-1000': 100,
+			'regs|1-1000': 100,
+			'rate|1-1000': 100,
+			'price|1-1000': 100
+		},
+		'items|10-30': [
+			{
+				'id|+1': 1,
+				'name|1-3': 'test',
+				'cpc|1-100': 100,
+				'cpm|1-100': 100,
+				'cpa|1-100': 100,
+				'clicks|1-100': 100,
+				'regs|1-100': 100,
+				'rate|1-100': 100,
+				'price|1-100': 100
 
-		<td id="firstTd">
-			<table cellspacing="0" cellpadding="0" border="1">
-				<tr>
-					<td class="tableHeaderTitle">
-						<input type="checkbox"/>
-					</td>
-					<td class="tableHeaderTitle">操作</td>
-					<td class="tableHeaderTitle">ID</td>
-					<td class="tableHeaderTitle">名称</td>
-				</tr>
-				<tr >
-					<td colspan="4">汇总</td>
-				</tr>
-			</table>
-		</td>
+				,'checkbox|1': '口',
+				'op|1': '操作'
+			}
+		]
+	}
 
-		<td>
-			<div id="divHeader" style="overflow:hidden;width:684px;">
-				<table cellspacing="0" cellpadding="0" border="1" >
-					<tr>
-						<td>
-							<div class="tableHeader">指标 1</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 2</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 3</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 4</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 5</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 1</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 2</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 3</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 4</div>
-						</td>
-						<td>
-							<div class="tableHeader">指标 5</div>
-						</td>
-					</tr>
-					<tr class="hasAmout">
-						<td>
-							<div class="tableHeader">111,331</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,332</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,333</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,334</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,335</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,331</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,332</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,333</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,334</div>
-						</td>
-						<td>
-							<div class="tableHeader">111,335</div>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</td>
-	</tr>
+);
+console.log(data);
 
-	<tr>
-		<!-- Index column -->
-		<td valign="top">
-			<div id="firstcol" style="overflow: hidden;height:130px">
-				<table width="230px" cellspacing="0" cellpadding="0" border="1" >
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 1 </td>
-						<td>index 1 </td>
-						<td>name 1 </td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 2</td>
-						<td>index 2</td>
-						<td>name 2</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 3</td>
-						<td>index 3</td>
-						<td>name 3</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 4</td>
-						<td>index 4</td>
-						<td>name 4</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 5</td>
-						<td>index 5</td>
-						<td>name 5</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 6</td>
-						<td>index 6</td>
-						<td>name 6</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 7</td>
-						<td>index 7</td>
-						<td>name 7</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 8</td>
-						<td>index 8</td>
-						<td>name 8</td>
-					</tr>
-					<tr class="tableFirstColTr">
-						<td>
-							<input type="checkbox"/>
-						</td>
-						<td>op 9</td>
-						<td>index 9</td>
-						<td>name 9</td>
-					</tr>
-				</table>
+var table = new Grid({data: data});
+table.$el.appendTo($('body'))
+table.calculate();
 
-			</div>
-		</td>
+</script>
 
-		<!-- contents -->
-		<td valign="top">
-			<div id="table_div" style="overflow: scroll;width:700px;height:150px;position:relative" onscroll="fnScroll()" >
-				<table width="1500px" cellspacing="0" cellpadding="0" border="1" >
-					<tr id='firstTr'>
-						<td>Row1Col1</td>
-						<td>Row1Col2</td>
-						<td>Row1Col3</td>
-						<td>Row1Col4</td>
-						<td>Row1Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row2Col1</td>
-						<td>Row2Col2</td>
-						<td>Row2Col3</td>
-						<td>Row2Col4</td>
-						<td>Row3Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row3Col1</td>
-						<td>Row3Col2</td>
-						<td>Row3Col3</td>
-						<td>Row3Col4</td>
-						<td>Row3Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row4Col1</td>
-						<td>Row4Col2</td>
-						<td>Row4Col3</td>
-						<td>Row4Col4</td>
-						<td>Row4Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row5Col1</td>
-						<td>Row5Col2</td>
-						<td>Row5Col3</td>
-						<td>Row5Col4</td>
-						<td>Row5Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row6Col1</td>
-						<td>Row6Col2</td>
-						<td>Row6Col3 is both wider and<br />taller than surrounding cells, yet<br />fixed elements still line up correctly</td>
-						<td>Row6Col4</td>
-						<td>Row6Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row7Col1</td>
-						<td>Row7Col2</td>
-						<td>Row7Col3</td>
-						<td>Row7Col4</td>
-						<td>Row7Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row8Col1</td>
-						<td>Row8Col2</td>
-						<td>Row8Col3</td>
-						<td>Row8Col4</td>
-						<td>Row8Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
-					<tr>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-						<td>Row9Col1</td>
-						<td>Row9Col2</td>
-						<td>Row9Col3</td>
-						<td>Row9Col4</td>
-						<td>Row9Col5</td>
-					</tr>
 
-				</table>
-			</div>
-		</td>
-	</tr>
-
-</table>
 
 </body>
 </html>
