--- a/main.html
+++ b/main.html
@@ -16,28 +16,29 @@
 var data = Mock.mock(
 	{
 		'amount|7': {
-			'cpc|1-1000': 100,
-			'cpm|1-1000': 100,
-			'cpa|1-1000': 100,
-			'clicks|1-1000': 100,
-			'regs|1-1000': 100,
-			'rate|1-1000': 100,
-			'price|1-1000': 100
+			'cpc|10000-2000000000000': 100,
+			'cpm|1-100000000': 100,
+			'cpa|1000000000-200000': 100,
+			'clicks|1-100000000': 100,
+			'regs|1-100000000': 100,
+			'rate|1-100000000': 100,
+			'price|1-100000000': 100
 		},
-		'items|10-30': [
+		'items|30-80': [
 			{
 				'id|+1': 1,
-				'name|1-3': 'test',
-				'cpc|1-100': 100,
+				'name|0-10': 'test',
+				'cpc|1-1000000': 100,
 				'cpm|1-100': 100,
-				'cpa|1-100': 100,
+				'cpa|1-100000': 100,
 				'clicks|1-100': 100,
 				'regs|1-100': 100,
 				'rate|1-100': 100,
 				'price|1-100': 100
 
 				,'checkbox|1': '口',
-				'op|1': '操作'
+				'op|1': '操作',
+				'test|0-10': 'test'
 			}
 		]
 	}
@@ -45,9 +46,19 @@ var data = Mock.mock(
 );
 console.log(data);
 
-var table = new Grid({data: data});
-table.$el.appendTo($('body'))
-table.calculate();
+
+var wrapper = $('<div class="wrapper"></div>');
+// var wrapper = $('body');
+wrapper.css({
+	width: '900px',
+	height: '500px'
+}).appendTo($('body'));
+
+
+var table = new Grid({
+	data: data,
+	target: wrapper
+});
 
 </script>
 
