布局修改为-左右布局，左浮右使用margin-left,内层容器自动排列； 功能列和汇总栏都设置为可配置的； 优化计算方式；

--- a/main.html
+++ b/main.html
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-
-
 <script src="libs/jquery.js"></script>
 <script src="libs/mock.js"></script>
 <script src="table.js"></script>
@@ -16,18 +14,18 @@
 var data = Mock.mock(
 	{
 		'amount|7': {
-			'cpc|10000-2000000000000': 100,
-			'cpm|1-100000000': 100,
-			'cpa|1000000000-200000': 100,
-			'clicks|1-100000000': 100,
-			'regs|1-100000000': 100,
-			'rate|1-100000000': 100,
-			'price|1-100000000': 100
+			'cpc|1-2000000000': 100,
+			'cpm|1-100000': 100,
+			'cpa|1-200': 100,
+			'clicks|1-100000': 100,
+			'regs|1-100000': 100,
+			'rate|1-100000': 100,
+			'price|1-100000': 100
 		},
-		'items|30-80': [
+		'items|10-40': [
 			{
 				'id|+1': 1,
-				'name|0-10': 'test',
+				'name|0-50': 'test',
 				'cpc|1-1000000': 100,
 				'cpm|1-100': 100,
 				'cpa|1-100000': 100,
@@ -50,7 +48,7 @@ console.log(data);
 var wrapper = $('<div class="wrapper"></div>');
 // var wrapper = $('body');
 wrapper.css({
-	width: '900px',
+	width: '1300px',
 	height: '500px'
 }).appendTo($('body'));
 
@@ -61,8 +59,6 @@ var table = new Grid({
 });
 
 </script>
-
-
 
 </body>
 </html>
