--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 var data = Mock.mock(
 	{
 		'amount|7': {
-			'cpc|1-2000000000': 100,
+			'cpc|1000000000-2000000000': 100,
 			'cpm|1-100000': 100,
 			'cpa|1-200': 100,
 			'clicks|1-100000': 100,
@@ -22,13 +22,13 @@ var data = Mock.mock(
 			'rate|1-100000': 100,
 			'price|1-100000': 100
 		},
-		'items|10-40': [
+		'items|1': [
 			{
 				'id|+1': 1,
-				'name|0-50': 'test',
-				'cpc|1-1000000': 100,
+				'name|0-1': 'test',
+				'cpc|1-1000': 100,
 				'cpm|1-100': 100,
-				'cpa|1-100000': 100,
+				'cpa|1-100': 100,
 				'clicks|1-100': 100,
 				'regs|1-100': 100,
 				'rate|1-100': 100,
@@ -36,7 +36,7 @@ var data = Mock.mock(
 
 				,'checkbox|1': '口',
 				'op|1': '操作',
-				'test|0-10': 'test'
+				'test|0-1': 'test'
 			}
 		]
 	}
@@ -48,7 +48,7 @@ console.log(data);
 var wrapper = $('<div class="wrapper"></div>');
 // var wrapper = $('body');
 wrapper.css({
-	width: '1300px',
+	width: '1000px',
 	height: '500px'
 }).appendTo($('body'));
 
