--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@ var data = Mock.mock(
 			'rate|1-10000': 100,
 			'price|1-10': 100
 		},
-		'items|6': [
+		'items|43': [
 			{
 				'id|+1': 1,
 				'name|0-1000': 'test',
@@ -34,7 +34,7 @@ var data = Mock.mock(
 				'rate|1-100': 100,
 				'price|1-100': 100
 
-				,'test|19': 'test'
+				,'test|16': 'test'
 			}
 		]
 	}
@@ -45,7 +45,7 @@ console.log(data);
 // var wrapper = $('<div class="wrapper"></div>');
 var wrapper = $('body');
 wrapper.css({
-	width: '1000px',
+	// width: '1000px',
 	height: '500px'
 }).appendTo($('body'));
 
